# nomad

./: .ocamlformat  CHANGES.md  README.org  dune-project  nomad.install  nomad.opam  nomad.opam.template  project.org
lib/: add.ml  aux.ml  cmd_util.ml  common.ml  config.ml  defaults.ml  dune  dune_cmd.ml  dune_config.ml  file.ml  git_cmd.ml  jbuild  new_project.ml  opam_cmd.ml  project.ml  result.ml  sync.ml
templates/: dune  jbuild
templates/lib/src/: %%NAME%%.ml  dune
templates/lib/test/: dune  jbuild  tests.ml
test/: README.org  dune  jbuild  tests.ml
test/add.t/: run.t
test/config.t/: run.t
test/new.t/: run.t
test/sync.t/: run.t
