(install
 (section share)
 (files
  (lib/%%NAME%%.opam   as templates/lib/%%NAME%%.opam)
  (lib/src/%%NAME%%.ml as templates/lib/src/%%NAME%%.ml)
  (lib/src/dune        as templates/lib/src/dune)
  (lib/test/dune       as templates/lib/test/dune)
  (lib/test/tests.ml   as templates/lib/test/tests.ml)
  (lib/.gitignore      as templates/lib/.gitignore)

  (bin/%%NAME%%.opam   as templates/bin/%%NAME%%.opam)
  (bin/bin/main.ml     as templates/bin/bin/main.ml)
  (bin/bin/dune        as templates/bin/bin/dune)
  (bin/lib/%%NAME%%.ml as templates/bin/lib/%%NAME%%.ml)
  (bin/lib/dune        as templates/bin/lib/dune)
  (bin/test/dune       as templates/bin/test/dune)
  (bin/test/tests.ml   as templates/bin/test/tests.ml)
  (bin/.gitignore      as templates/bin/.gitignore)))

;  ignore the lib and bin dirs
(dirs :standard \ lib bin)
